fix horizontal scroll

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -308,7 +308,6 @@ nav {
 
 .loyaltyContainer img {
   width: 80%;
-  margin-left: 5%;
 }
 
 .loyaltyTextContainer {
